# ObjectWorld

./: .clang-format  CMakeLists.txt  README.md  run.py  vcpkg.json
#orld/Private/: World.cpp
App/: CMakeLists.txt
App/Private/: App.cpp
Core/Public/: Types.h
Main/: CMakeLists.txt
Main/Private/: main.cpp
Object/: CMakeLists.txt
Object/Public/: Object.h
Object/Public/Object/: Object.h
Object/Public/object/: Name.h  Object.h
Player/: CMakeLists.txt
Player/Public/: Player.h
Source/: CMakeLists.txt
Source/App/: CMakeLists.txt
Source/App/Private/: App.cpp
Source/App/Public/App/: App.h
Source/Main/: CMakeLists.txt
Source/Main/Private/: main.cpp
Source/Object/: CMakeLists.txt
Source/Object/Private/: Name.cpp  Object.cpp
Source/Object/Public/Object/: Event.h  Name.h  Object.h  SpecialMath.h
Source/Player/: CMakeLists.txt
Source/Player/Private/: Player.cpp
Source/Player/Public/Player/: Player.h
Source/Window/: CMakeLists.txt
Source/Window/Private/: Window.cpp
Source/Window/Public/Window/: Window.h
Source/World/: CMakeLists.txt
Source/World/Private/: World.cpp
Source/World/Public/World/: World.h
Window/Private/: Window.cpp
Window/Public/Window/: Window.h
World/: CMakeLists.txt
World/Private/: World.cpp
World/Public/: World.h
app/: CMakeLists.txt
app/Private/: App.cpp
app/Public/app/: App.h
cmake/: deps.cmake  flags.cmake
core/: CMakeLists.txt
core/Public/: Types.h
main/: CMakeLists.txt
main/Private/: main.cpp  main.h
object/: CMakeLists.txt
object/Private/: Name.cpp  Object.cpp
object/Public/: Object.h
object/Public/object/: Events.h  Macros.h  Name.h  Object.h
player/: CMakeLists.txt
player/Private/: Player.cpp
player/Public/: Player.h
player/Public/player/: Player.h
window/: CMakeLists.txt
window/Private/: Window.cpp
window/Public/window/: Window.h
window/Public/world/: Window.h
world/: CMakeLists.txt
world/Private/: World.cpp
world/Public/: World.h
world/Public/world/: World.h
